--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "react-switch": "^7.0.0",
+    "theme-ui": "^0.16.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
