--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-switch": "^7.0.0",
     "theme-ui": "^0.16.1",
+    "video.js": "^8.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
